--- a/monte_carlo.tex
+++ b/monte_carlo.tex
@@ -175,14 +175,13 @@ If the error estimate is too high, the entire calculation must be redone.
 Everything must be done in double precision, and the summation is not compensated.
 The domains must be finite and ``square-like'', which will force the problem of domain rescaling to the user. Also, the function is never evaluated at the endpoints, allowing singular functions to be evaluated.
 
-A GSL function that can be passed to it's Monte-Carlo routine must have the following interface
-
+A GSL function that can be passed to its Monte-Carlo routine must have the following interface:
 \begin{minted}{c}
 double f(double* x, int dim, void* params);
 \end{minted}
 \texttt{x} must be a vector of length \texttt{dim}.
 \texttt{dim} is redundant because it must match the domain dimension.
-The params seems to allow the user to use a single function to define a class of functions, say, by turning params into a set of polynomial coefficients and making $f$ a polynomial evaluator.
+\texttt{params} seems to allow the user to use a single function to define a class of functions, say, by turning params into a set of polynomial coefficients and making $f$ a polynomial evaluator.
 
 \subsection{Numerical Recipes \texttt{MCintegrate}}
 
@@ -211,9 +210,6 @@ double f(const std::vector<double> &x);
 
 
 The true problem to be solved with a single threaded implementation is cancellation, progress reporting, and restarting.
-
-This is done in the file \texttt{naive\_monte\_carlo\_single\_thread.hpp}.
-
 For progress reporting, we note that compute time $T \propto N_{\mathrm{eval}}$, the number of function evaluations.
 The model is
 \begin{align*}
@@ -239,13 +235,14 @@ and
 \end{align*}
 Despite the obvious problems with this progress estimate, I can see no way of improving on it.
 
+A simple implementation is given in \texttt{naive\_monte\_carlo\_single\_thread.hpp}.
 \section{Multithreaded Implementation}
 
 The foundation of the multithreaded Monte-Carlo integration is the linearity of variance for uncorrelated random variables
 \begin{align*}
 \mathbf{Var}(\mathbf{x} + \mathbf{y}) = \mathbf{Var}(\mathbf{x}) + \mathbf{Var}(\mathbf{y})
 \end{align*}
-and linearity of taking averages.
+and linearity of taking averages.\footnote{I actually do not know if the variables are uncorrelated. I suspect they are unless the RNG has a major problem.}
 This allows us to let each thread compute its own Monte-Carlo estimate and then a master thread can accumulate their individual variances and function call counts.
 Once these are accumulated, then the master thread can test if the error goal is met, and if so set an \texttt{atomic\_flag} which tells all other threads to stop working.
 Once they finish, a final estimate is made, and the computation is stopped.
