--- a/monte_carlo.tex
+++ b/monte_carlo.tex
@@ -1,8 +1,5 @@
 \documentclass[landscape]{article}
 \usepackage[margin=0.3in]{geometry}
-%\usepackage{tikz}
-%\usepackage{tikz-3dplot}
-%\usetikzlibrary{matrix,arrows.meta}
 \usepackage{amsmath,amsthm,amssymb}
 \numberwithin{equation}{section}
 \usepackage{hyperref}
@@ -13,7 +10,7 @@ urlcolor=red
 \usepackage{bm}
 \usepackage{graphicx}
 \usepackage[sc]{mathpazo}
-\usepackage{fancyhdr} % Headers and footers
+\usepackage{fancyhdr}
 \usepackage{xcolor}
 \usepackage{minted}
 \pagecolor{black}
@@ -41,7 +38,6 @@ urlcolor=red
 \item[\hskip \labelsep {\bfseries #1}\hskip \labelsep {\bfseries #2.}]}{\end{trivlist}}
 
 \begin{document}
-%\renewcommand{\qedsymbol}{\filledbox}
 
 \title{Monte-Carlo Integration in Boost.Math}
 \author{Nick Thompson}
